style.css
@import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,700&display=swap');

:root {
  --blue : #1DA1F2;
  --red : #F71A7F;
  --green : #17B97F;
  --black : #0f1419;
  --gray : #657786;
  --dark-gray : #536471 ;
  --light-blue : #dfeffc;
  --light-red : #F7E0EB;
  --light-green : #DEF1EB;
  --light-gray : #ececec;
  --extra-light-gray : #F7F7F7;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  display: grid;
  background: #fff;
  overflow-x: hidden;
  font-family: 'Libre Franklin', sans-serif;
  max-width: 1250px;
  margin: 0 auto;
}

aside {
  display: none;
}

/* Buttons */
.btn {
  background: none;
  border: none;
  padding: 0.3rem;
  min-width: 20px;
  min-height: 20px;
}


.btn-top-tweet {
  width: 40px;
  height: 40px;
  padding: 0;
  display: flex;
  justify-content: end;
  align-items: center;
}

.btn-tweet {
  height: 36px;
  background-color: #8FCEF5;
  color: white;
  padding: 0 20px;
  border-radius: 25px;
  font-weight: bold;
}

.btn-article-more {
  padding: 7px 9px;
  margin: -8px;
  font-size: 1rem;
  color: var(--dark-gray);
}

.btn-article {
  padding: 0;
  gap: 8px;
  font-size: 0.9375rem;
  color: var(--gray);
}

.btn-article .icon {
  padding: 2px;
}

.btn:hover {
  cursor: pointer;
}

.btn-home:hover {
  border-radius: 50%;
  background: var(--light-blue);
}

.btn-tweet:hover {
  cursor: default;
}

.btn-article-more:hover {
  border-radius: 50%;
  background: var(--light-blue);
  color: var(--blue);
}

.btn-article--comment:hover, .btn-article--share:hover {
  color: var(--blue);
}

.btn-article--retweet:hover {
  color: var(--green);
}

.btn-article--like:hover {
  color: var(--red);
}

.btn-article--comment:hover > .icon, .btn-article--share:hover > .icon {
  background-color: var(--light-blue);
  border-radius: 50%;
}

.btn-article--retweet:hover > .icon {
  background-color: var(--light-green);
  border-radius: 50%;
}

.btn-article--like:hover > .icon {
  background-color: var(--light-red);
  border-radius: 50%;
}

/* Navigation bar */
body > header {
  position: fixed;
  bottom: 0;
  width: 100%;
  z-index: 999;
  background: #fff;
}

.nav-bar {
  padding: 0.1rem 0;
}

.btn-home {
  display: none;
}

.bottom-items {
  display: none;
}

nav ul li:nth-child(5),
nav ul li:nth-child(6),
nav ul li:nth-child(7),
nav ul li:nth-child(8),
nav ul li .fa-hashtag {
  display: none;
}

nav ul li:nth-child(9) {
  position: absolute;
  right: 5%;
  bottom: 130%;
}

nav ul {
  display: flex;
  flex-direction: row;
  align-items: center;
  list-style: none;
  justify-content: space-around;
}

.btn-home, 
.btn-nav {
  padding: 1em 0.4em;
  min-width: 50px;
  max-height: 52px;
  border-radius: 50%;
}

.btn-nav-tweet {
  width: 54px;
  height: 54px;
  border-radius: 50%;
  background: var(--blue);
  text-align: center;
  color: #fff;
  font-size: 1em;
}

nav ul li:hover {
  cursor: pointer;
}

nav ul li:hover > .btn-nav{
  cursor: pointer;
  background: var(--light-gray);
}

.btn-nav-tweet:hover {
  background-color: #1e96e0;
}

.btn-nav-value {
  display: none;
}

.btn-account:hover{
  background: var(--light-gray);
}

.fa-twitter {
  font-size: 2.1em;
  color: var(--blue);
}

.btn-nav-icon {
  width: 25px;
  height: auto;
  font-size: 1.5rem;
}

.btn-nav-tweet .btn-nav-icon {
  font-size: 1rem;
}

.profile-img {
  width: 40px;
  height: 40px;
  border-radius: 50%;
  object-fit: cover;
}

/* Main Section */
main {
  background: #ffffff;
}

/* Main Content */
.main-content {
  max-width: 600px;
  min-width: 300px;
  height: 2000px;
  border-left: 1.5px solid #EFF3F4;
  border-right: 1.5px solid #EFF3F4;
  display: grid;
  grid-template-rows: 53px 1fr;
}

.wrapper {
  padding: 0 1rem;
}

/* Header */
.main-content header {
  width: 100%;
  top: 0;
  position: fixed;
  z-index: 999;
  background-color: #fffffff6;
}

.main-content header .wrapper {
  display: grid;
  grid-template-columns: auto 1fr auto;
  justify-content: center;
  align-items: center;
  column-gap: 30px;
}

.main-content header:hover {
  cursor: pointer;
}

.main-content header .wrapper {
  height: 3.3125rem;
}

.title {
  font-size: 1.0625rem;
  font-weight: 600;
}

.profile-img--small {
  width: 32px;
  height: 32px;
}

.top-tweet-icon {
  width: 22px;
  height: 22px;
}

.divider {
  margin: 4px 0;
  border-top: 1.5px solid #EFF3F4;
}

.divider--m0 {
  margin: 0;
}

/* Tweet Form Section */
.tweet-form {
  display: none;
}

/* Tweet Section */
.tweets {
  grid-row: 2 / 3;
}

.card {
  display: grid;
  width: auto;
  min-height: 48px;
}

.card:hover {
  cursor: pointer;
  background: var(--extra-light-gray);
}

.card-show-tweet {
  padding: 0.8em 0;
}

.card-show-tweet .btn-show-tweet {
  padding: 0;
  font-size: 0.9375rem;
  font-weight: 500;
  text-align: center;
  color: var(--blue);
}

.card-article {
  padding-top: 12px;
  padding-bottom: 12px;
  grid-template-columns: auto 1fr;
  gap: 15px;
  align-items: start;
}

.card-article--other {
  padding: 15px;
  border: 1px solid #CFD9DE;
  border-radius: 15px;
}

.card-article--other:hover {
  cursor: pointer;
  background-color: #EFEFEF;
}

.card-article--other article {
  display: grid;
  gap: 5px;
  justify-items: start;
}

.article-profile--other {
  width: 100%;
  display: flex;
  flex-direction: row;
  gap: 10px;
}

.profile-img--other {
  width: 20px;
  height: 20px;
  border-radius: 50%;
}

.btn-show-thread {
  padding: 0;
  font-size: 0.9375rem;
  color: var(--blue);
}

.article-left-item {
  justify-self: start;
}

.article-left-item .retweet-icon {
  color: var(--dark-gray);
  font-size: 0.9375rem;
  text-align: right;
  margin-bottom: 2px;
}

.article-right-item {
  display: flex;
  flex-direction: column;
}

.article-right-item .retweet-profile-name {
  color: var(--dark-gray);
  font-size: 0.8125rem;
  font-weight: 600;
  margin-bottom: 7px;
}

.article-right-item .retweet-profile-name:hover {
  text-decoration: underline;
}
/* ... */

